<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.avaje</groupId>
    <artifactId>java11-oss</artifactId>
    <version>5.2</version>
    <relativePath />
  </parent>

  <groupId>io.avaje</groupId>
  <artifactId>avaje-openapi-generators</artifactId>
  <version>0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>avaje-openapi-generators</name>
  <description>OpenAPI contract-first generators for Avaje HTTP API</description>

  <modules>
    <module>avaje-openapi-generator-core</module>
    <module>avaje-openapi-maven-plugin</module>
    <module>avaje-openapi-plugin-tests</module>
    <module>avaje-openapi-sample</module>
  </modules>

  <properties>
    <maven.compiler.release>11</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <avaje.http.version>3.8</avaje.http.version>
    <avaje.inject.version>12.5</avaje.inject.version>
    <avaje.jsonb.version>3.13</avaje.jsonb.version>
    <avaje.record.builder.version>1.4</avaje.record.builder.version>
    <avaje.validator.version>2.17</avaje.validator.version>
    <assertj.version>3.27.3</assertj.version>
    <jakarta.validation.version>3.1.1</jakarta.validation.version>
    <junit.version>5.12.2</junit.version>
    <maven.version>3.9.9</maven.version>
    <maven.plugin.annotations.version>3.15.1</maven.plugin.annotations.version>
    <swagger.parser.version>2.1.42</swagger.parser.version>
    <helidon.version>4.4.1</helidon.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.swagger.parser.v3</groupId>
        <artifactId>swagger-parser</artifactId>
        <version>${swagger.parser.version}</version>
      </dependency>
      <dependency>
        <groupId>io.avaje</groupId>
        <artifactId>avaje-http-api</artifactId>
        <version>${avaje.http.version}</version>
      </dependency>
      <dependency>
        <groupId>io.avaje</groupId>
        <artifactId>avaje-http-client</artifactId>
        <version>${avaje.http.version}</version>
      </dependency>
      <dependency>
        <groupId>io.avaje</groupId>
        <artifactId>avaje-http-client-generator</artifactId>
        <version>${avaje.http.version}</version>
      </dependency>
      <dependency>
        <groupId>io.avaje</groupId>
        <artifactId>avaje-http-helidon-generator</artifactId>
        <version>${avaje.http.version}</version>
      </dependency>
      <dependency>
        <groupId>io.avaje</groupId>
        <artifactId>avaje-inject</artifactId>
        <version>${avaje.inject.version}</version>
      </dependency>
      <dependency>
        <groupId>io.avaje</groupId>
        <artifactId>avaje-inject-generator</artifactId>
        <version>${avaje.inject.version}</version>
      </dependency>
      <dependency>
        <groupId>io.avaje</groupId>
        <artifactId>avaje-jsonb</artifactId>
        <version>${avaje.jsonb.version}</version>
      </dependency>
      <dependency>
        <groupId>io.avaje</groupId>
        <artifactId>avaje-jsonb-generator</artifactId>
        <version>${avaje.jsonb.version}</version>
      </dependency>
      <dependency>
        <groupId>io.avaje</groupId>
        <artifactId>avaje-record-builder</artifactId>
        <version>${avaje.record.builder.version}</version>
      </dependency>
      <dependency>
        <groupId>io.avaje</groupId>
        <artifactId>avaje-validator-constraints</artifactId>
        <version>${avaje.validator.version}</version>
      </dependency>
      <dependency>
        <groupId>io.helidon.webserver</groupId>
        <artifactId>helidon-webserver</artifactId>
        <version>${helidon.version}</version>
      </dependency>
      <dependency>
        <groupId>io.helidon.http.media</groupId>
        <artifactId>helidon-http-media-jsonb</artifactId>
        <version>${helidon.version}</version>
      </dependency>
      <dependency>
        <groupId>jakarta.validation</groupId>
        <artifactId>jakarta.validation-api</artifactId>
        <version>${jakarta.validation.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-core</artifactId>
        <version>${maven.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-plugin-api</artifactId>
        <version>${maven.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.plugin-tools</groupId>
        <artifactId>maven-plugin-annotations</artifactId>
        <version>${maven.plugin.annotations.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.version}</version>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

</project>
